--- a/base_library/build.gradle
+++ b/base_library/build.gradle
@@ -1,10 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion rootProject.ext.targetSdkVersion
+
     defaultConfig {
-        minSdkVersion 21
-        targetSdkVersion 28
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     //指定jdk版本
